testsuite/bsc.typechecker/kind/mismatch/TyConParamTooFew_InProviso.bsv.bsc-out.expected
checking package dependencies
compiling TyConParamTooFew_InProviso.bsv
Error: "TyConParamTooFew_InProviso.bsv", line 2, column 23: (T0025)
  The type `TAdd' is applied to too few arguments.
